[package]
name = "cdom"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "cdom"
path = "wasm/cdom/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen-futures = "*"
js-sys = "*"
indexmap = "1.5"
wasm-bindgen = {version = "0.2.63", features = ["serde-serialize"]}
pulldown-cmark = "*"
once_cell = "1.3.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
instant = "*"
console_log = "*"
rand = { version = "*", features = ["wasm-bindgen", "small_rng"] }
# wasm-timer = "*"
chrono = "0.4.11"
reqwest = "0.10.6"
gloo = "*"
gloo-timers = "*"
gloo-events = "*"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
futures = "*"

[dependencies.web-sys]
version = "*"
features = [
    "Blob",
    "CanvasRenderingContext2d",
    "AnimationEvent",
    "console",
    "DataTransfer",
    "Document",
    "DomTokenList",
    "ObserverCallback",
    "DragEvent",
    "Element",
    "Event",
    "EventListener",
    "ErrorEvent",
    "EventTarget",
    "File",
    "FileReader",
    "FormData",
    "HashChangeEvent",
    "Headers",
    "History",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlDocument",
    "HtmlBodyElement",
    "HtmlInputElement",
    "HtmlImageElement",
    "HtmlDivElement",
    "HtmlLinkElement",
    "HtmlMenuItemElement",
    "HtmlProgressElement",
    "HtmlOptionElement",
    "HtmlDataElement",
    "HtmlMeterElement",
    "HtmlLiElement",
    "HtmlOutputElement",
    "HtmlParamElement",
    "HtmlParagraphElement",
    "HtmlSpanElement",
    "HtmlOListElement",
    "HtmlUListElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlButtonElement",
    "Location",
    "MessageEvent",
    "MouseEvent",
    "Navigator",
    "Node",
    "NodeList",
    "Performance",
    "ProgressEvent",
    "PointerEvent",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Selection",
    "Storage",
    "TcpReadyState",
    "Text",
    "Touch",
    "TouchEvent",
    "TouchList",
    "console",
    "WebSocket",
    "Window",
    "KeyboardEvent",
    "InputEvent",
    "Url",
    "UrlSearchParams",
    "WebSocket",
    "Worker",
    "WorkerOptions",
    "WorkerGlobalScope",
    "DedicatedWorkerGlobalScope",
    "WheelEvent",
    "BinaryType"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
