[package]
name = "cdom"
version = "0.1.0"
authors = ["clp <clp@clp.is>"]
edition = "2018"

[lib]
name = "cdom"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
wasm-bindgen-futures = "*"
lazy_static = "*"
thiserror = "*"
# serde_traitobject = "*"
# serde_cosure = "*"
# dodrio = "*"
# gloo-timers = "*"
# gloo-file = "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

# indexmap = "*"
js-sys = "*"
# rayon = "*"
# rayon-core = "*"

serde = { version = "*", features = ["derive"] }
instant = "*"
console_log = "*"
# serde_json = "*"
# lite-parser = "*"
# lite-json = "*"
wasm-timer = "*"
rand = { version = "*", features = ["wasm-bindgen", "small_rng"] }
# futures = "*"
# uuid = { version = "*", features = ["v4", "wasm-bindgen"] }
# pulldown-cmark = "*"
# image = "*"


[dependencies.web-sys]
version = "*"
features = [
    "AbortController",
    "AbortSignal",
    "BeforeUnloadEvent",
    "Blob",
    "BinaryType",
    "CanvasRenderingContext2d",
    "CloseEvent",
    "console",
    "CustomEvent",
    "CustomEventInit",
    "DataTransfer",
    "Document",
    "DomException",
    "DragEvent",
    "Element",
    "Event",
    "EventListener",
    "ErrorEvent",
    "EventTarget",
    "File",
    "FileReader",
    "FormData",
    "HashChangeEvent",
    "Headers",
    "History",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlDocument",
    "HtmlBodyElement",
    "HtmlInputElement",
    "HtmlImageElement",
    "HtmlDivElement",
    "HtmlLinkElement",
    "HtmlMenuItemElement",
    "HtmlProgressElement",
    "HtmlOptionElement",
    "HtmlDataElement",
    "HtmlMeterElement",
    "HtmlLiElement",
    "HtmlOutputElement",
    "HtmlParamElement",
    "HtmlParagraphElement",
    "HtmlSpanElement",
    "HtmlOListElement",
    "HtmlUListElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlButtonElement",
    "Location",
    "MessageEvent",
    "MouseEvent",
    "Navigator",
    "Node",
    "NodeList",
    "Performance",
    "ProgressEvent",
    "PointerEvent",
    "PopStateEvent",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Selection",
    "Storage",
    "TcpReadyState",
    "Text",
    "Touch",
    "TouchEvent",
    "TouchList",
    "console",
    "WebSocket",
    "Window",
    "KeyboardEvent",
    "InputEvent",
    "Url",
    "UrlSearchParams",
    "WebSocket",
    "WebGlBuffer",
    "WebGlRenderingContext",
    "WebGlShader",
    "Worker",
    "DedicatedWorkerGlobalScope",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1
panic = 'abort'

